src/index.css
/* ... */
.navbar h2 {
	color: #ffffff;

}

.navbar h2:hover {
	-webkit-animation: vibrate-1 0.6s ease-in infinite both,
		text-shadow-drop-left 0.1s 0.1s both;
	animation: vibrate-1 0.6s ease-in infinite both,
		text-shadow-drop-left 0.1s 0.1s both;
	cursor: url(./images/mariomouse.png), auto;
}

@-webkit-keyframes vibrate-1 {
	0% {
		-webkit-transform: translate(0);
		transform: translate(0);
	}

	20% {
		-webkit-transform: translate(-2px, 2px);
		transform: translate(-2px, 2px);
	}

	40% {
		-webkit-transform: translate(-2px, -2px);
		transform: translate(-2px, -2px);
	}

	60% {
		-webkit-transform: translate(2px, 2px);
		transform: translate(2px, 2px);
	}

	80% {
		-webkit-transform: translate(2px, -2px);
		transform: translate(2px, -2px);
	}

	100% {
		-webkit-transform: translate(0);
		transform: translate(0);
	}
}

@keyframes vibrate-1 {
	0% {
		-webkit-transform: translate(0);
		transform: translate(0);
	}

	20% {
		-webkit-transform: translate(-2px, 2px);
		transform: translate(-2px, 2px);
	}

	40% {
		-webkit-transform: translate(-2px, -2px);
		transform: translate(-2px, -2px);
	}

	60% {
		-webkit-transform: translate(2px, 2px);
		transform: translate(2px, 2px);
	}

	80% {
		-webkit-transform: translate(2px, -2px);
		transform: translate(2px, -2px);
	}

	100% {
		-webkit-transform: translate(0);
		transform: translate(0);
	}
}


nav a:hover {
	text-decoration: none;
}

nav li:hover {
	cursor: pointer;
	-webkit-animation: text-shadow-drop-center 0.0s both;
	animation: text-shadow-drop-center 0.0s both;
}

@-webkit-keyframes text-shadow-drop-center {
	0% {
		text-shadow: 0 0 0 rgba(0, 0, 0, 0);
	}

	100% {
		text-shadow: 0 0 18px rgb(0, 0, 0);
	}
}

@keyframes text-shadow-drop-center {
	0% {
		text-shadow: 0 0 0 rgba(0, 0, 0, 0);
	}

	100% {
		text-shadow: 0 0 18px rgb(0, 0, 0);
	}
}

textarea {
	width: 600px;
	height: 120px;
	border: 3px solid #cccccc;
	padding: 5px;
}

.container {
	width: 100%;
	max-width: 1200px;
	margin: 0 auto;
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	/* Updated: Center the cards */
}

.flex-row {
	display: flex;
	justify-content: space-evenly;
	top: 10%;
}

.space-between {
	justify-content: space-between;
}

.flex-end {
	justify-content: flex-end;
}

.mx-1 {
	margin-right: var(--spacing-one);
	margin-left: var(--spacing-one);
}

.mx-2 {
	margin-right: var(--spacing-two);
	margin-left: var(--spacing-two);
}

.my-1 {
	margin-top: var(--spacing-one);
	margin-bottom: var(--spacing-one);
}

.my-2 {
	margin-top: var(--spacing-two);
	margin-bottom: var(--spacing-two);
}


.my-5 {
	margin-top: var(--spacing-five);
	margin-bottom: var(--spacing-five);
}

.px-1 {
	padding-right: var(--spacing-one);
	padding-left: var(--spacing-one);
}

.px-2 {
	padding-right: var(--spacing-two);
	padding-left: var(--spacing-two);
}

.py-1 {
	padding-top: var(--spacing-one);
	padding-bottom: var(--spacing-one);
}

.py-2 {
	padding-top: var(--spacing-two);
	padding-bottom: var(--spacing-two);
}

.img-thumbnail {
	width: auto;
	height: 300px;
	margin-bottom: 50px;
	cursor: pointer;
}

.modalBackdrop {
	background: rgba(0, 0, 0, .65);
	bottom: 0;
	left: 0;
	overflow: auto;
	position: fixed;
	right: 0;
	top: 0;
	z-index: 1;
}

.modalContainer {
	background: var(--bgColourer);
	border-radius: 5px;
	max-width: 100%;
	margin: 50px auto;
	padding: 15px;
	width: 960px;
}

.modalTitle {
	font-size: 18px;
	font-weight: 600;
	margin-bottom: 25px;
}

.navActive {
	color: #000000;
	-webkit-animation: text-shadow-drop-center2 0.0s both;
	animation: text-shadow-drop-center2 0.0s both;
}

@-webkit-keyframes text-shadow-drop-center2 {
	0% {
		text-shadow: 0 0 0 rgba(0, 0, 0, 0);
	}

	100% {
		text-shadow: 0 0 26px rgb(0, 0, 0);
	}
}

@keyframes text-shadow-drop-center2 {
	0% {
		text-shadow: 0 0 0 rgba(0, 0, 0, 0);
	}

	100% {
		text-shadow: 0 0 26px rgb(0, 0, 0);
	}
}

.footer {
	border-top-right-radius: 15px;
	border-top-left-radius: 15px;
	display: flex;
	justify-content: center;
	text-align: center;
	overflow: hidden;
	position: relative;
	-webkit-animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
	animation: fade-in 1.2s cubic-bezier(0.390, 0.575, 0.565, 1.000) both;
}

.footer:before {
	position: absolute;
	background-color: rgba(255, 255, 255, 0.3);
	backdrop-filter: blur(8px) saturate(100%) contrast(45%) brightness(130%);
	content: '';
	top: 0rem;
	bottom: 0rem;
	left: 0rem;
	right: 0rem;
	z-index: -1;
	border-top: 1px solid #fff;
	border-left: 1px solid #fff;
	border-right: 1px solid #fff;
}

@-webkit-keyframes fade-in {
	0% {
		opacity: 0;
	}

	100% {}
}

@keyframes fade-in {
	0% {
		opacity: 0;
	}

	100% {}
}

.photo {
	width: auto;
	height: auto;
	max-width: 480px;
	max-height: 640px;
	margin-bottom: 50px;
}

.image {
	width: auto;
	height: auto;
	max-width: 500px;
	max-height: 500px;
	padding: 50px;
}

.logo {
	display: flex;
	width: 50px;
	justify-content: center;
	margin: 15px;
	padding-top: 10px;
}

.logo:hover {
	opacity: 0.5;
	cursor: pointer;
	-webkit-animation: heartbeat 1.5s ease-in-out infinite both;
	animation: heartbeat 1.5s ease-in-out infinite both;
}

@-webkit-keyframes heartbeat {
	from {
		-webkit-transform: scale(1);
		transform: scale(1);
		-webkit-transform-origin: center center;
		transform-origin: center center;
		-webkit-animation-timing-function: ease-out;
		animation-timing-function: ease-out;
	}

	10% {
		-webkit-transform: scale(0.91);
		transform: scale(0.91);
		-webkit-animation-timing-function: ease-in;
		animation-timing-function: ease-in;
	}

	17% {
		-webkit-transform: scale(0.98);
		transform: scale(0.98);
		-webkit-animation-timing-function: ease-out;
		animation-timing-function: ease-out;
	}

	33% {
		-webkit-transform: scale(0.87);
		transform: scale(0.87);
		-webkit-animation-timing-function: ease-in;
		animation-timing-function: ease-in;
	}

	45% {
		-webkit-transform: scale(1);
		transform: scale(1);
		-webkit-animation-timing-function: ease-out;
		animation-timing-function: ease-out;
	}
}
/* ... */

